k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice2
  template:
    metadata:
      labels:
        app: microservice2
    spec:
      containers:
      - name: microservice2
        image: us-central1-docker.pkg.dev/heroic-gamma-465105-c8/microservicequiz/microservice2@sha256:58c3a1e2fef27d410f6aca449dda510a606e3b1fadb18c7b3725c30c70a984b8
        ports:
          - containerPort: 80
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /microservice2
            port: 80
            scheme: HTTP
