k8s/all.yaml
# ----------------- Microservice 1 -----------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice1
  template:
    metadata:
      labels:
        app: microservice1
    spec:
      containers:
        - name: microservice1
          image: us-central1-docker.pkg.dev/heroic-gamma-465105-c8/microservicequiz/microservice1@sha256:102a9688dace4e72f982cb2ac645068587583a63d9bfe00d8eb7f7a8aa0452af
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /microservice1
              port: 80
              scheme: HTTP
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: microservice1
spec:
  selector:
    app: microservice1
  ports:
    - port: 80
      targetPort: 80
  type: NodePort

# ----------------- Microservice 2 -----------------
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice2
  template:
    metadata:
      labels:
        app: microservice2
    spec:
      containers:
        - name: microservice2
          image: us-central1-docker.pkg.dev/heroic-gamma-465105-c8/microservicequiz/microservice2@sha256:58c3a1e2fef27d410f6aca449dda510a606e3b1fadb18c7b3725c30c70a984b8
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /microservice2
              port: 80
              scheme: HTTP
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: microservice2
spec:
  selector:
    app: microservice2
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
