k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /microservice1
        pathType: Prefix
        backend:
          service:
            name: microservice1
            port:
              number: 80
      - path: /microservice2
        pathType: Prefix
        backend:
          service:
            name: microservice2
            port:
              number: 80
